[gd_scene load_steps=21 format=3 uid="uid://bs18n0b7vaju6"]

[ext_resource type="Script" uid="uid://dbrmrn82o4ln8" path="res://Scripts/darkbird.gd" id="1_7te06"]
[ext_resource type="Texture2D" uid="uid://mracxs786ynb" path="res://GameArt/TMMDarkBirdFly1.png" id="3_0bjdc"]
[ext_resource type="Texture2D" uid="uid://bapnf131jmdih" path="res://GameArt/TMMEnemyDeath1.png" id="3_1bxau"]
[ext_resource type="Texture2D" uid="uid://c4xrmq4k0coem" path="res://GameArt/TMMDarkBirdFly2.png" id="4_o0w7l"]
[ext_resource type="Texture2D" uid="uid://l1yxspaxqyio" path="res://GameArt/TMMEnemyDeath2.png" id="4_x5ti2"]
[ext_resource type="Texture2D" uid="uid://hcy0hjwm1svq" path="res://GameArt/TMMEnemyDeath3.png" id="5_1gvge"]
[ext_resource type="Texture2D" uid="uid://cuqukm2duu7s8" path="res://GameArt/TMMDarkBirdHurt.png" id="5_h6cmu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6aavs"]
atlas = ExtResource("4_o0w7l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iltec"]
atlas = ExtResource("3_1bxau")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm5fv"]
atlas = ExtResource("4_x5ti2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8rtf"]
atlas = ExtResource("5_1gvge")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hojsp"]
atlas = ExtResource("3_0bjdc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdd7f"]
atlas = ExtResource("4_o0w7l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xspks"]
atlas = ExtResource("5_h6cmu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhccp"]
atlas = ExtResource("3_0bjdc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_75xat"]
atlas = ExtResource("4_o0w7l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_po7aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aavs")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iltec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm5fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8rtf")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hojsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdd7f")
}],
"loop": true,
"name": &"flying",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xspks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhccp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75xat")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_by4lu"]
radius = 20.025

[sub_resource type="CircleShape2D" id="CircleShape2D_htht3"]
radius = 21.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rq6ys"]
radius = 22.0

[node name="darkbird" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_7te06")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_po7aa")
animation = &"hurt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_by4lu")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_htht3")

[node name="BirdDealDmgArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BirdDealDmgArea"]
shape = SubResource("CircleShape2D_rq6ys")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
